css/default.css
body {
    font-size: 16px;
    margin: 0px auto 0px auto;
    width: 600px;
    font-family:'IBM Plex Mono', monospace;
    color:#222831 
}
div#header {
    border-bottom: 2px solid #222831;
    margin-bottom: 30px;
    padding: 12px 0px 12px 0px;
}
div#logo a {
    color: #222831;
    float: left;
    font-size: 18px;
    font-weight: bold;
    text-decoration: none;
}
div#header #navigation {
    text-align: right;
}
div#header #navigation a {
    color: #222831;
    font-size: 18px;
    font-weight: bold;
    margin-left: 12px;
    text-decoration: none;
}
div#footer {
    border-top: solid 2px #222831;
    color: #555;
    font-size: 12px;
    margin-top: 30px;
    padding: 12px 0px 12px 0px;
    text-align: right;
}
h1 {
    font-size: 24px;
}
h2 {
    font-size: 20px;
}
p {
    text-align: justify;
}
div.info {
    color: #555;
    font-size: 14px;
    font-style: italic;
}
pre.sourceCode{
    background-color:#f8f8f8;
    border:1px solid #000;
    padding:6px 10px;
    overflow-x:auto;
    font-size:14px 
}
table.sourceCode,tr.sourceCode,td.lineNumbers,td.sourceCode,table.sourceCode pre{
    margin:0;
    padding:0;
    border:0;
    vertical-align:baseline;
    border:none 
}
td.lineNumbers{
    border-right:1px solid #AAAAAA;
    text-align:right;
    color:#AAAAAA;
    padding-right:5px;
    padding-left:5px 
}
td.sourceCode{
    padding-left:5px 
}
.sourceCode span.kw, span.im, span.cf{
    color:#353535;
    font-weight:bold 
}
.sourceCode span.dt{
    color:#902000 
}
.sourceCode span.dv{
    color:#40a070 
}
.sourceCode span.bn{
    color:#40a070 
}
.sourceCode span.fl{
    color:#40a070 
}
.sourceCode span.ch{
    color:#4070a0 
}
.sourceCode span.st{
    color:#4070a0 
}
.sourceCode span.co{
    color:#60a0b0;
    font-style:italic 
}
.sourceCode span.ot{
    color:#007020 
}
.sourceCode span.al{
    color:red;
    font-weight:bold 
}
.sourceCode span.fu{
    color:#06287e 
}
.sourceCode span.re{
}
.sourceCode span.er{
    color:red;
    font-weight:bold 
}
/*table config*/
.scrolltable {
    overflow-x: scroll;
    height: 100%;
    display: flex;
    display: -webkit-flex;
    flex-direction: column;
    -webkit-flex-direction: column;
}
.scrolltable > .body {
    /*noinspection CssInvalidPropertyValue*/
    width: -webkit-fit-content;
    overflow-y: scroll;
    flex: 1;
    -webkit-flex: 1;
}

/* an outside constraint to react against */
#constrainer {
    width: 400px;
    height: 200px;
}
#constrainer2 {
    width: 400px;
    overflow-x: scroll;
}
#constrainer2 tbody {
    overflow-y: scroll;
    display: block;
    height: 200px;
}
#constrainer2 thead {
    display: table-row;
}

/* only styling below here */
#constrainer, #constrainer2 {
    border: 1px solid lightgrey;
}
table {
    border-collapse: collapse;
    overflow-x: scroll;
    height: 100%;
    display: flex;
    display: -webkit-flex;
    flex-direction: column;
}
th, td {
    border: 1px solid #bbb;
    min-width: 100px;
    font-size: 12px;
}
th {
    background-color: lightgrey;
    border-width: 1px;
}
tr:first-child td {
    border-top-width: 0;
}
tr:nth-child(even) {
    background-color: #eee;
}

